parser/dj.output
Grammar

    0 $accept: pgm $end

    1 pgm: classlist_or_empty MAIN LBRACE variablelist_or_empty explist RBRACE ENDOFFILE

    2 classlist_or_empty: classlist
    3                   | ε

    4 classlist: classlist class
    5          | class

    6 class: CLASS id EXTENDS id LBRACE variablelist_or_empty methodlist_or_empty RBRACE

    7 variablelist_or_empty: variablelist_or_empty variable
    8                      | ε

    9 variable: id id SEMICOLON
   10         | nat id SEMICOLON

   11 methodlist_or_empty: methodlist
   12                    | ε

   13 methodlist: methodlist method
   14           | method

   15 method: id id LPAREN parameterlist_or_empty RPAREN LBRACE variablelist_or_empty explist RBRACE
   16       | nat id LPAREN parameterlist_or_empty RPAREN LBRACE variablelist_or_empty explist RBRACE

   17 parameterlist_or_empty: parameterlist
   18                       | ε

   19 parameterlist: parameterlist COMMA parameter
   20              | parameter

   21 parameter: id id
   22          | nat id

   23 id: ID

   24 nat: NATTYPE

   25 explist: explist exp SEMICOLON
   26        | exp SEMICOLON

   27 exp: exp DOT id LPAREN argumentlist_or_empty RPAREN
   28    | id LPAREN argumentlist_or_empty RPAREN
   29    | exp DOT id
   30    | id
   31    | exp DOT id ASSIGN exp
   32    | id ASSIGN exp
   33    | exp PLUS exp
   34    | exp MINUS exp
   35    | exp TIMES exp
   36    | exp EQUALITY exp
   37    | exp GREATER exp
   38    | NOT exp
   39    | exp AND exp
   40    | IF LPAREN exp RPAREN LBRACE explist RBRACE ELSE LBRACE explist RBRACE
   41    | WHILE LPAREN exp RPAREN LBRACE explist RBRACE
   42    | PRINTNAT LPAREN exp RPAREN
   43    | READNAT LPAREN RPAREN
   44    | THIS
   45    | NEW id LPAREN RPAREN
   46    | NUL
   47    | NATLITERAL
   48    | LPAREN exp RPAREN

   49 argumentlist_or_empty: argumentlist
   50                      | ε

   51 argumentlist: argumentlist COMMA exp
   52             | exp


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    MAIN (258) 1
    CLASS (259) 6
    EXTENDS (260) 6
    NATTYPE (261) 24
    IF (262) 40
    ELSE (263) 40
    WHILE (264) 41
    PRINTNAT (265) 42
    READNAT (266) 43
    THIS (267) 44
    NEW (268) 45
    NUL (269) 46
    NATLITERAL (270) 47
    ID (271) 23
    ASSIGN (272) 31 32
    PLUS (273) 33
    MINUS (274) 34
    TIMES (275) 35
    EQUALITY (276) 36
    GREATER (277) 37
    AND (278) 39
    NOT (279) 38
    DOT (280) 27 29 31
    SEMICOLON (281) 9 10 25 26
    COMMA (282) 19 51
    LBRACE (283) 1 6 15 16 40 41
    RBRACE (284) 1 6 15 16 40 41
    LPAREN (285) 15 16 27 28 40 41 42 43 45 48
    RPAREN (286) 15 16 27 28 40 41 42 43 45 48
    ENDOFFILE (287) 1


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    pgm (34)
        on left: 1
        on right: 0
    classlist_or_empty (35)
        on left: 2 3
        on right: 1
    classlist (36)
        on left: 4 5
        on right: 2 4
    class (37)
        on left: 6
        on right: 4 5
    variablelist_or_empty (38)
        on left: 7 8
        on right: 1 6 7 15 16
    variable (39)
        on left: 9 10
        on right: 7
    methodlist_or_empty (40)
        on left: 11 12
        on right: 6
    methodlist (41)
        on left: 13 14
        on right: 11 13
    method (42)
        on left: 15 16
        on right: 13 14
    parameterlist_or_empty (43)
        on left: 17 18
        on right: 15 16
    parameterlist (44)
        on left: 19 20
        on right: 17 19
    parameter (45)
        on left: 21 22
        on right: 19 20
    id (46)
        on left: 23
        on right: 6 9 10 15 16 21 22 27 28 29 30 31 32 45
    nat (47)
        on left: 24
        on right: 10 16 22
    explist (48)
        on left: 25 26
        on right: 1 15 16 25 40 41
    exp (49)
        on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
        on right: 25 26 27 29 31 32 33 34 35 36 37 38 39 40 41 42 48 51 52
    argumentlist_or_empty (50)
        on left: 49 50
        on right: 27 28
    argumentlist (51)
        on left: 51 52
        on right: 49 51


State 0

    0 $accept: • pgm $end

    CLASS  shift, and go to state 1

    $default  reduce using rule 3 (classlist_or_empty)

    pgm                 go to state 2
    classlist_or_empty  go to state 3
    classlist           go to state 4
    class               go to state 5


State 1

    6 class: CLASS • id EXTENDS id LBRACE variablelist_or_empty methodlist_or_empty RBRACE

    ID  shift, and go to state 6

    id  go to state 7


State 2

    0 $accept: pgm • $end

    $end  shift, and go to state 8


State 3

    1 pgm: classlist_or_empty • MAIN LBRACE variablelist_or_empty explist RBRACE ENDOFFILE

    MAIN  shift, and go to state 9


State 4

    2 classlist_or_empty: classlist •
    4 classlist: classlist • class

    CLASS  shift, and go to state 1

    $default  reduce using rule 2 (classlist_or_empty)

    class  go to state 10


State 5

    5 classlist: class •

    $default  reduce using rule 5 (classlist)


State 6

   23 id: ID •

    $default  reduce using rule 23 (id)


State 7

    6 class: CLASS id • EXTENDS id LBRACE variablelist_or_empty methodlist_or_empty RBRACE

    EXTENDS  shift, and go to state 11


State 8

    0 $accept: pgm $end •

    $default  accept


State 9

    1 pgm: classlist_or_empty MAIN • LBRACE variablelist_or_empty explist RBRACE ENDOFFILE

    LBRACE  shift, and go to state 12


State 10

    4 classlist: classlist class •

    $default  reduce using rule 4 (classlist)


State 11

    6 class: CLASS id EXTENDS • id LBRACE variablelist_or_empty methodlist_or_empty RBRACE

    ID  shift, and go to state 6

    id  go to state 13


State 12

    1 pgm: classlist_or_empty MAIN LBRACE • variablelist_or_empty explist RBRACE ENDOFFILE

    $default  reduce using rule 8 (variablelist_or_empty)

    variablelist_or_empty  go to state 14


State 13

    6 class: CLASS id EXTENDS id • LBRACE variablelist_or_empty methodlist_or_empty RBRACE

    LBRACE  shift, and go to state 15


State 14

    1 pgm: classlist_or_empty MAIN LBRACE variablelist_or_empty • explist RBRACE ENDOFFILE
    7 variablelist_or_empty: variablelist_or_empty • variable

    NATTYPE     shift, and go to state 16
    IF          shift, and go to state 17
    WHILE       shift, and go to state 18
    PRINTNAT    shift, and go to state 19
    READNAT     shift, and go to state 20
    THIS        shift, and go to state 21
    NEW         shift, and go to state 22
    NUL         shift, and go to state 23
    NATLITERAL  shift, and go to state 24
    ID          shift, and go to state 6
    NOT         shift, and go to state 25
    LPAREN      shift, and go to state 26

    variable  go to state 27
    id        go to state 28
    nat       go to state 29
    explist   go to state 30
    exp       go to state 31


State 15

    6 class: CLASS id EXTENDS id LBRACE • variablelist_or_empty methodlist_or_empty RBRACE

    $default  reduce using rule 8 (variablelist_or_empty)

    variablelist_or_empty  go to state 32


State 16

   24 nat: NATTYPE •

    $default  reduce using rule 24 (nat)


State 17

   40 exp: IF • LPAREN exp RPAREN LBRACE explist RBRACE ELSE LBRACE explist RBRACE

    LPAREN  shift, and go to state 33


State 18

   41 exp: WHILE • LPAREN exp RPAREN LBRACE explist RBRACE

    LPAREN  shift, and go to state 34


State 19

   42 exp: PRINTNAT • LPAREN exp RPAREN

    LPAREN  shift, and go to state 35


State 20

   43 exp: READNAT • LPAREN RPAREN

    LPAREN  shift, and go to state 36


State 21

   44 exp: THIS •

    $default  reduce using rule 44 (exp)


State 22

   45 exp: NEW • id LPAREN RPAREN

    ID  shift, and go to state 6

    id  go to state 37


State 23

   46 exp: NUL •

    $default  reduce using rule 46 (exp)


State 24

   47 exp: NATLITERAL •

    $default  reduce using rule 47 (exp)


State 25

   38 exp: NOT • exp

    IF          shift, and go to state 17
    WHILE       shift, and go to state 18
    PRINTNAT    shift, and go to state 19
    READNAT     shift, and go to state 20
    THIS        shift, and go to state 21
    NEW         shift, and go to state 22
    NUL         shift, and go to state 23
    NATLITERAL  shift, and go to state 24
    ID          shift, and go to state 6
    NOT         shift, and go to state 25
    LPAREN      shift, and go to state 26

    id   go to state 38
    exp  go to state 39


State 26

   48 exp: LPAREN • exp RPAREN

    IF          shift, and go to state 17
    WHILE       shift, and go to state 18
    PRINTNAT    shift, and go to state 19
    READNAT     shift, and go to state 20
    THIS        shift, and go to state 21
    NEW         shift, and go to state 22
    NUL         shift, and go to state 23
    NATLITERAL  shift, and go to state 24
    ID          shift, and go to state 6
    NOT         shift, and go to state 25
    LPAREN      shift, and go to state 26

    id   go to state 38
    exp  go to state 40


State 27

    7 variablelist_or_empty: variablelist_or_empty variable •

    $default  reduce using rule 7 (variablelist_or_empty)


State 28

    9 variable: id • id SEMICOLON
   28 exp: id • LPAREN argumentlist_or_empty RPAREN
   30    | id •
   32    | id • ASSIGN exp

    ID      shift, and go to state 6
    ASSIGN  shift, and go to state 41
    LPAREN  shift, and go to state 42

    $default  reduce using rule 30 (exp)

    id  go to state 43


State 29

   10 variable: nat • id SEMICOLON

    ID  shift, and go to state 6

    id  go to state 44


State 30

    1 pgm: classlist_or_empty MAIN LBRACE variablelist_or_empty explist • RBRACE ENDOFFILE
   25 explist: explist • exp SEMICOLON

    IF          shift, and go to state 17
    WHILE       shift, and go to state 18
    PRINTNAT    shift, and go to state 19
    READNAT     shift, and go to state 20
    THIS        shift, and go to state 21
    NEW         shift, and go to state 22
    NUL         shift, and go to state 23
    NATLITERAL  shift, and go to state 24
    ID          shift, and go to state 6
    NOT         shift, and go to state 25
    RBRACE      shift, and go to state 45
    LPAREN      shift, and go to state 26

    id   go to state 38
    exp  go to state 46


State 31

   26 explist: exp • SEMICOLON
   27 exp: exp • DOT id LPAREN argumentlist_or_empty RPAREN
   29    | exp • DOT id
   31    | exp • DOT id ASSIGN exp
   33    | exp • PLUS exp
   34    | exp • MINUS exp
   35    | exp • TIMES exp
   36    | exp • EQUALITY exp
   37    | exp • GREATER exp
   39    | exp • AND exp

    PLUS       shift, and go to state 47
    MINUS      shift, and go to state 48
    TIMES      shift, and go to state 49
    EQUALITY   shift, and go to state 50
    GREATER    shift, and go to state 51
    AND        shift, and go to state 52
    DOT        shift, and go to state 53
    SEMICOLON  shift, and go to state 54


State 32

    6 class: CLASS id EXTENDS id LBRACE variablelist_or_empty • methodlist_or_empty RBRACE
    7 variablelist_or_empty: variablelist_or_empty • variable

    NATTYPE  shift, and go to state 16
    ID       shift, and go to state 6

    $default  reduce using rule 12 (methodlist_or_empty)

    variable             go to state 27
    methodlist_or_empty  go to state 55
    methodlist           go to state 56
    method               go to state 57
    id                   go to state 58
    nat                  go to state 59


State 33

   40 exp: IF LPAREN • exp RPAREN LBRACE explist RBRACE ELSE LBRACE explist RBRACE

    IF          shift, and go to state 17
    WHILE       shift, and go to state 18
    PRINTNAT    shift, and go to state 19
    READNAT     shift, and go to state 20
    THIS        shift, and go to state 21
    NEW         shift, and go to state 22
    NUL         shift, and go to state 23
    NATLITERAL  shift, and go to state 24
    ID          shift, and go to state 6
    NOT         shift, and go to state 25
    LPAREN      shift, and go to state 26

    id   go to state 38
    exp  go to state 60


State 34

   41 exp: WHILE LPAREN • exp RPAREN LBRACE explist RBRACE

    IF          shift, and go to state 17
    WHILE       shift, and go to state 18
    PRINTNAT    shift, and go to state 19
    READNAT     shift, and go to state 20
    THIS        shift, and go to state 21
    NEW         shift, and go to state 22
    NUL         shift, and go to state 23
    NATLITERAL  shift, and go to state 24
    ID          shift, and go to state 6
    NOT         shift, and go to state 25
    LPAREN      shift, and go to state 26

    id   go to state 38
    exp  go to state 61


State 35

   42 exp: PRINTNAT LPAREN • exp RPAREN

    IF          shift, and go to state 17
    WHILE       shift, and go to state 18
    PRINTNAT    shift, and go to state 19
    READNAT     shift, and go to state 20
    THIS        shift, and go to state 21
    NEW         shift, and go to state 22
    NUL         shift, and go to state 23
    NATLITERAL  shift, and go to state 24
    ID          shift, and go to state 6
    NOT         shift, and go to state 25
    LPAREN      shift, and go to state 26

    id   go to state 38
    exp  go to state 62


State 36

   43 exp: READNAT LPAREN • RPAREN

    RPAREN  shift, and go to state 63


State 37

   45 exp: NEW id • LPAREN RPAREN

    LPAREN  shift, and go to state 64


State 38

   28 exp: id • LPAREN argumentlist_or_empty RPAREN
   30    | id •
   32    | id • ASSIGN exp

    ASSIGN  shift, and go to state 41
    LPAREN  shift, and go to state 42

    $default  reduce using rule 30 (exp)


State 39

   27 exp: exp • DOT id LPAREN argumentlist_or_empty RPAREN
   29    | exp • DOT id
   31    | exp • DOT id ASSIGN exp
   33    | exp • PLUS exp
   34    | exp • MINUS exp
   35    | exp • TIMES exp
   36    | exp • EQUALITY exp
   37    | exp • GREATER exp
   38    | NOT exp •
   39    | exp • AND exp

    DOT  shift, and go to state 53

    $default  reduce using rule 38 (exp)


State 40

   27 exp: exp • DOT id LPAREN argumentlist_or_empty RPAREN
   29    | exp • DOT id
   31    | exp • DOT id ASSIGN exp
   33    | exp • PLUS exp
   34    | exp • MINUS exp
   35    | exp • TIMES exp
   36    | exp • EQUALITY exp
   37    | exp • GREATER exp
   39    | exp • AND exp
   48    | LPAREN exp • RPAREN

    PLUS      shift, and go to state 47
    MINUS     shift, and go to state 48
    TIMES     shift, and go to state 49
    EQUALITY  shift, and go to state 50
    GREATER   shift, and go to state 51
    AND       shift, and go to state 52
    DOT       shift, and go to state 53
    RPAREN    shift, and go to state 65


State 41

   32 exp: id ASSIGN • exp

    IF          shift, and go to state 17
    WHILE       shift, and go to state 18
    PRINTNAT    shift, and go to state 19
    READNAT     shift, and go to state 20
    THIS        shift, and go to state 21
    NEW         shift, and go to state 22
    NUL         shift, and go to state 23
    NATLITERAL  shift, and go to state 24
    ID          shift, and go to state 6
    NOT         shift, and go to state 25
    LPAREN      shift, and go to state 26

    id   go to state 38
    exp  go to state 66


State 42

   28 exp: id LPAREN • argumentlist_or_empty RPAREN

    IF          shift, and go to state 17
    WHILE       shift, and go to state 18
    PRINTNAT    shift, and go to state 19
    READNAT     shift, and go to state 20
    THIS        shift, and go to state 21
    NEW         shift, and go to state 22
    NUL         shift, and go to state 23
    NATLITERAL  shift, and go to state 24
    ID          shift, and go to state 6
    NOT         shift, and go to state 25
    LPAREN      shift, and go to state 26

    $default  reduce using rule 50 (argumentlist_or_empty)

    id                     go to state 38
    exp                    go to state 67
    argumentlist_or_empty  go to state 68
    argumentlist           go to state 69


State 43

    9 variable: id id • SEMICOLON

    SEMICOLON  shift, and go to state 70


State 44

   10 variable: nat id • SEMICOLON

    SEMICOLON  shift, and go to state 71


State 45

    1 pgm: classlist_or_empty MAIN LBRACE variablelist_or_empty explist RBRACE • ENDOFFILE

    ENDOFFILE  shift, and go to state 72


State 46

   25 explist: explist exp • SEMICOLON
   27 exp: exp • DOT id LPAREN argumentlist_or_empty RPAREN
   29    | exp • DOT id
   31    | exp • DOT id ASSIGN exp
   33    | exp • PLUS exp
   34    | exp • MINUS exp
   35    | exp • TIMES exp
   36    | exp • EQUALITY exp
   37    | exp • GREATER exp
   39    | exp • AND exp

    PLUS       shift, and go to state 47
    MINUS      shift, and go to state 48
    TIMES      shift, and go to state 49
    EQUALITY   shift, and go to state 50
    GREATER    shift, and go to state 51
    AND        shift, and go to state 52
    DOT        shift, and go to state 53
    SEMICOLON  shift, and go to state 73


State 47

   33 exp: exp PLUS • exp

    IF          shift, and go to state 17
    WHILE       shift, and go to state 18
    PRINTNAT    shift, and go to state 19
    READNAT     shift, and go to state 20
    THIS        shift, and go to state 21
    NEW         shift, and go to state 22
    NUL         shift, and go to state 23
    NATLITERAL  shift, and go to state 24
    ID          shift, and go to state 6
    NOT         shift, and go to state 25
    LPAREN      shift, and go to state 26

    id   go to state 38
    exp  go to state 74


State 48

   34 exp: exp MINUS • exp

    IF          shift, and go to state 17
    WHILE       shift, and go to state 18
    PRINTNAT    shift, and go to state 19
    READNAT     shift, and go to state 20
    THIS        shift, and go to state 21
    NEW         shift, and go to state 22
    NUL         shift, and go to state 23
    NATLITERAL  shift, and go to state 24
    ID          shift, and go to state 6
    NOT         shift, and go to state 25
    LPAREN      shift, and go to state 26

    id   go to state 38
    exp  go to state 75


State 49

   35 exp: exp TIMES • exp

    IF          shift, and go to state 17
    WHILE       shift, and go to state 18
    PRINTNAT    shift, and go to state 19
    READNAT     shift, and go to state 20
    THIS        shift, and go to state 21
    NEW         shift, and go to state 22
    NUL         shift, and go to state 23
    NATLITERAL  shift, and go to state 24
    ID          shift, and go to state 6
    NOT         shift, and go to state 25
    LPAREN      shift, and go to state 26

    id   go to state 38
    exp  go to state 76


State 50

   36 exp: exp EQUALITY • exp

    IF          shift, and go to state 17
    WHILE       shift, and go to state 18
    PRINTNAT    shift, and go to state 19
    READNAT     shift, and go to state 20
    THIS        shift, and go to state 21
    NEW         shift, and go to state 22
    NUL         shift, and go to state 23
    NATLITERAL  shift, and go to state 24
    ID          shift, and go to state 6
    NOT         shift, and go to state 25
    LPAREN      shift, and go to state 26

    id   go to state 38
    exp  go to state 77


State 51

   37 exp: exp GREATER • exp

    IF          shift, and go to state 17
    WHILE       shift, and go to state 18
    PRINTNAT    shift, and go to state 19
    READNAT     shift, and go to state 20
    THIS        shift, and go to state 21
    NEW         shift, and go to state 22
    NUL         shift, and go to state 23
    NATLITERAL  shift, and go to state 24
    ID          shift, and go to state 6
    NOT         shift, and go to state 25
    LPAREN      shift, and go to state 26

    id   go to state 38
    exp  go to state 78


State 52

   39 exp: exp AND • exp

    IF          shift, and go to state 17
    WHILE       shift, and go to state 18
    PRINTNAT    shift, and go to state 19
    READNAT     shift, and go to state 20
    THIS        shift, and go to state 21
    NEW         shift, and go to state 22
    NUL         shift, and go to state 23
    NATLITERAL  shift, and go to state 24
    ID          shift, and go to state 6
    NOT         shift, and go to state 25
    LPAREN      shift, and go to state 26

    id   go to state 38
    exp  go to state 79


State 53

   27 exp: exp DOT • id LPAREN argumentlist_or_empty RPAREN
   29    | exp DOT • id
   31    | exp DOT • id ASSIGN exp

    ID  shift, and go to state 6

    id  go to state 80


State 54

   26 explist: exp SEMICOLON •

    $default  reduce using rule 26 (explist)


State 55

    6 class: CLASS id EXTENDS id LBRACE variablelist_or_empty methodlist_or_empty • RBRACE

    RBRACE  shift, and go to state 81


State 56

   11 methodlist_or_empty: methodlist •
   13 methodlist: methodlist • method

    NATTYPE  shift, and go to state 16
    ID       shift, and go to state 6

    $default  reduce using rule 11 (methodlist_or_empty)

    method  go to state 82
    id      go to state 83
    nat     go to state 84


State 57

   14 methodlist: method •

    $default  reduce using rule 14 (methodlist)


State 58

    9 variable: id • id SEMICOLON
   15 method: id • id LPAREN parameterlist_or_empty RPAREN LBRACE variablelist_or_empty explist RBRACE

    ID  shift, and go to state 6

    id  go to state 85


State 59

   10 variable: nat • id SEMICOLON
   16 method: nat • id LPAREN parameterlist_or_empty RPAREN LBRACE variablelist_or_empty explist RBRACE

    ID  shift, and go to state 6

    id  go to state 86


State 60

   27 exp: exp • DOT id LPAREN argumentlist_or_empty RPAREN
   29    | exp • DOT id
   31    | exp • DOT id ASSIGN exp
   33    | exp • PLUS exp
   34    | exp • MINUS exp
   35    | exp • TIMES exp
   36    | exp • EQUALITY exp
   37    | exp • GREATER exp
   39    | exp • AND exp
   40    | IF LPAREN exp • RPAREN LBRACE explist RBRACE ELSE LBRACE explist RBRACE

    PLUS      shift, and go to state 47
    MINUS     shift, and go to state 48
    TIMES     shift, and go to state 49
    EQUALITY  shift, and go to state 50
    GREATER   shift, and go to state 51
    AND       shift, and go to state 52
    DOT       shift, and go to state 53
    RPAREN    shift, and go to state 87


State 61

   27 exp: exp • DOT id LPAREN argumentlist_or_empty RPAREN
   29    | exp • DOT id
   31    | exp • DOT id ASSIGN exp
   33    | exp • PLUS exp
   34    | exp • MINUS exp
   35    | exp • TIMES exp
   36    | exp • EQUALITY exp
   37    | exp • GREATER exp
   39    | exp • AND exp
   41    | WHILE LPAREN exp • RPAREN LBRACE explist RBRACE

    PLUS      shift, and go to state 47
    MINUS     shift, and go to state 48
    TIMES     shift, and go to state 49
    EQUALITY  shift, and go to state 50
    GREATER   shift, and go to state 51
    AND       shift, and go to state 52
    DOT       shift, and go to state 53
    RPAREN    shift, and go to state 88


State 62

   27 exp: exp • DOT id LPAREN argumentlist_or_empty RPAREN
   29    | exp • DOT id
   31    | exp • DOT id ASSIGN exp
   33    | exp • PLUS exp
   34    | exp • MINUS exp
   35    | exp • TIMES exp
   36    | exp • EQUALITY exp
   37    | exp • GREATER exp
   39    | exp • AND exp
   42    | PRINTNAT LPAREN exp • RPAREN

    PLUS      shift, and go to state 47
    MINUS     shift, and go to state 48
    TIMES     shift, and go to state 49
    EQUALITY  shift, and go to state 50
    GREATER   shift, and go to state 51
    AND       shift, and go to state 52
    DOT       shift, and go to state 53
    RPAREN    shift, and go to state 89


State 63

   43 exp: READNAT LPAREN RPAREN •

    $default  reduce using rule 43 (exp)


State 64

   45 exp: NEW id LPAREN • RPAREN

    RPAREN  shift, and go to state 90


State 65

   48 exp: LPAREN exp RPAREN •

    $default  reduce using rule 48 (exp)


State 66

   27 exp: exp • DOT id LPAREN argumentlist_or_empty RPAREN
   29    | exp • DOT id
   31    | exp • DOT id ASSIGN exp
   32    | id ASSIGN exp •
   33    | exp • PLUS exp
   34    | exp • MINUS exp
   35    | exp • TIMES exp
   36    | exp • EQUALITY exp
   37    | exp • GREATER exp
   39    | exp • AND exp

    PLUS      shift, and go to state 47
    MINUS     shift, and go to state 48
    TIMES     shift, and go to state 49
    EQUALITY  shift, and go to state 50
    GREATER   shift, and go to state 51
    AND       shift, and go to state 52
    DOT       shift, and go to state 53

    $default  reduce using rule 32 (exp)


State 67

   27 exp: exp • DOT id LPAREN argumentlist_or_empty RPAREN
   29    | exp • DOT id
   31    | exp • DOT id ASSIGN exp
   33    | exp • PLUS exp
   34    | exp • MINUS exp
   35    | exp • TIMES exp
   36    | exp • EQUALITY exp
   37    | exp • GREATER exp
   39    | exp • AND exp
   52 argumentlist: exp •
